// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/nuxt/plugin not root project should create nodes 1`] = `
{
  "projects": {
    "my-app": {
      "root": "my-app",
      "targets": {
        "acme-build-static": {
          "cache": true,
          "command": "nuxt build --prerender",
          "dependsOn": [
            "^acme-build-static",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": "my-app",
          },
          "outputs": [
            "{workspaceRoot}/dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "acme-serve-static": {
          "continuous": true,
          "executor": "@nx/web:file-server",
          "options": {
            "buildTarget": "acme-build-static",
            "port": 4200,
            "spa": false,
            "staticFilePath": "{projectRoot}/dist",
          },
        },
        "build-deps": {
          "dependsOn": [
            "^build",
          ],
        },
        "build-something": {
          "cache": true,
          "command": "nuxt build",
          "dependsOn": [
            "^build-something",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": "my-app",
          },
          "outputs": [
            "{workspaceRoot}/dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "my-serve": {
          "command": "nuxt dev",
          "continuous": true,
          "options": {
            "cwd": "my-app",
          },
        },
        "watch-deps": {
          "command": "npx nx watch --projects my-app --includeDependentProjects -- npx nx build-deps my-app",
          "continuous": true,
          "dependsOn": [
            "build-deps",
          ],
        },
      },
    },
  },
}
`;

exports[`@nx/nuxt/plugin root project should create nodes 1`] = `
{
  "projects": {
    ".": {
      "root": ".",
      "targets": {
        "build": {
          "cache": true,
          "command": "nuxt build",
          "dependsOn": [
            "^build",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": ".",
          },
          "outputs": [
            "dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "build-deps": {
          "dependsOn": [
            "^build",
          ],
        },
        "build-static": {
          "cache": true,
          "command": "nuxt build --prerender",
          "dependsOn": [
            "^build-static",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": ".",
          },
          "outputs": [
            "dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "serve": {
          "command": "nuxt dev",
          "continuous": true,
          "options": {
            "cwd": ".",
          },
        },
        "serve-static": {
          "continuous": true,
          "executor": "@nx/web:file-server",
          "options": {
            "buildTarget": "build-static",
            "port": 4200,
            "spa": false,
            "staticFilePath": "{projectRoot}/dist",
          },
        },
        "watch-deps": {
          "command": "npx nx watch --projects nuxt --includeDependentProjects -- npx nx build-deps nuxt",
          "continuous": true,
          "dependsOn": [
            "build-deps",
          ],
        },
      },
    },
  },
}
`;
